# automa

./: .gitignore  LICENSE  README.md  config_manager.py  css_loader.py  i18n.py  icon_loader.py  installer.py  io.github.lnxlink.gui.json  main.py  pyproject.toml  service_manager.py  setup_icons.py  style.css
flatpak/: io.github.lnxlink.automa.desktop  io.github.lnxlink.automa.metainfo.xml  io.github.lnxlink.automa.yml  io.github.ro2342.automa.desktop  io.github.ro2342.automa.metainfo.xml  io.github.ro2342.automa.yml  python3-modules.json
gnome-extension/: extension.js  install.sh  metadata.json  stylesheet.css
locale/pt_BR/LC_MESSAGES/: lnxlink-gui.mo  lnxlink-gui.po  lnxlink-gui.pot
pages/: commands.py  dashboard.py  mqtt_config.py  sensors.py  settings.py  welcome.py
